@@ -1,54 +1,8 @@
 package lhdt.controller.rest;
 
-import java.io.BufferedInputStream;
-import java.io.BufferedOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipFile;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.dao.DataAccessException;
-import org.springframework.http.HttpStatus;
-import org.springframework.util.FileCopyUtils;
-import org.springframework.util.StringUtils;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.multipart.MultipartHttpServletRequest;
-
-import lombok.extern.slf4j.Slf4j;
 import lhdt.config.PropertiesConfig;
 import lhdt.controller.AuthorizationController;
-import lhdt.domain.GeoPolicy;
-import lhdt.domain.Key;
-import lhdt.domain.Layer;
-import lhdt.domain.LayerFileInfo;
-import lhdt.domain.LayerType;
-import lhdt.domain.Policy;
-import lhdt.domain.ShapeFileExt;
-import lhdt.domain.UserSession;
+import lhdt.domain.*;
 import lhdt.geospatial.ShapeFileParser;
 import lhdt.service.GeoPolicyService;
 import lhdt.service.LayerFileInfoService;
@@ -57,6 +11,28 @@ import lhdt.service.PolicyService;
 import lhdt.support.LogMessageSupport;
 import lhdt.support.ZipSupport;
 import lhdt.utils.WebUtils;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.BeanUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataAccessException;
+import org.springframework.http.HttpStatus;
+import org.springframework.util.FileCopyUtils;
+import org.springframework.util.StringUtils;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.multipart.MultipartHttpServletRequest;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.*;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipFile;
 
 @Slf4j
 @RestController
@@ -82,10 +58,9 @@ public class LayerRestController implements AuthorizationController {
 		Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
-		String geoserverLayerJson = null;
-		
+
 		GeoPolicy geoPolicy = geoPolicyService.getGeoPolicy();
-		geoserverLayerJson = layerService.getListGeoserverLayer(geoPolicy);
+		String geoserverLayerJson = layerService.getListGeoserverLayer(geoPolicy);
 		int statusCode = HttpStatus.OK.value();
 
 		result.put("statusCode", statusCode);
@@ -135,7 +110,7 @@ public class LayerRestController implements AuthorizationController {
 	 * shape 파일 변환 TODO dropzone 이 파일 갯수만큼 form data를 전송해 버려서 command 패턴을(Layer
 	 * layer) 사용할 수 없음 dropzone 이 예외 처리가 이상해서 BAD_REQUEST 를 던지지 않고 OK 를 넣짐
 	 *
-	 * @param model
+	 * @param request
 	 * @return
 	 */
 	@SuppressWarnings("unchecked")
@@ -234,7 +209,7 @@ public class LayerRestController implements AuthorizationController {
 					// 파일 기본 validation 체크
 					errorCode = fileValidate(policy, multipartFile);
 					if (!StringUtils.isEmpty(errorCode)) {
-						statusCode = HttpStatus.BAD_REQUEST.value();
+						result.put("statusCode", HttpStatus.BAD_REQUEST.value());
 						result.put("errorCode", errorCode);
 						return result;
 					}
@@ -242,7 +217,7 @@ public class LayerRestController implements AuthorizationController {
 					String originalName = multipartFile.getOriginalFilename();
 					String[] divideFileName = originalName.split("\\.");
 					String extension = null;
-					if (divideFileName != null && divideFileName.length != 0) {
+					if (divideFileName.length != 0) {
 						extension = divideFileName[divideFileName.length - 1];
 						if (LayerFileInfo.ZIP_EXTENSION.equalsIgnoreCase(extension)) {
 							log.info("@@@@@@@@@@@@ upload.file.type.invalid");
@@ -257,7 +232,7 @@ public class LayerRestController implements AuthorizationController {
 					try (	InputStream inputStream = multipartFile.getInputStream();
 							OutputStream outputStream = new FileOutputStream(makedDirectory + saveFileName)) {
 
-						int bytesRead = 0;
+						int bytesRead;
 						byte[] buffer = new byte[BUFFER_SIZE];
 						while ((bytesRead = inputStream.read(buffer, 0, BUFFER_SIZE)) != -1) {
 							size += bytesRead;
@@ -270,10 +245,10 @@ public class LayerRestController implements AuthorizationController {
 						layerFileInfo.setFileSize(String.valueOf(size));
 						layerFileInfo.setShapeEncoding(shapeEncoding);
 					} catch(IOException e) {
-						log.info("@@@@@@@@@@@@ IOException. message = {}", e.getMessage());
+						LogMessageSupport.printMessage(e, "@@@@@@@@@@@@ IOException. message = {}", e.getMessage());
 						layerFileInfo.setErrorMessage(e.getMessage());
 					} catch(Exception e) {
-						log.info("@@@@@@@@@@@@ Exception. message = {}", e.getMessage());
+						LogMessageSupport.printMessage(e, "@@@@@@@@@@@@ Exception. message = {}", e.getMessage());
 						layerFileInfo.setErrorMessage(e.getMessage());
 					}
 
@@ -324,38 +299,36 @@ public class LayerRestController implements AuthorizationController {
 		} catch(DataAccessException e) {
 			// ogr2ogr2 실행하다가 에러날경우 이미 들어간 레이어, 레이러 파일정보 삭제 
 			Integer layerId = (Integer) updateLayerMap.get("layerId");
-			Integer layerFileInfoGroupId = (Integer) updateLayerMap.get("layerFileInfoGroupId");
+			Integer layerFileInfoTeamId = (Integer) updateLayerMap.get("layerFileInfoTeamId");
 			layerService.deleteLayer(layerId);
-			layerFileInfoService.deleteLayerFileInfoByGroupId(layerFileInfoGroupId);
+			layerFileInfoService.deleteLayerFileInfoByTeamId(layerFileInfoTeamId);
 			
 			statusCode = HttpStatus.INTERNAL_SERVER_ERROR.value();
 			errorCode = "db.exception";
 			message = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
-			log.info("@@ db.exception. message = {}", message);
+			LogMessageSupport.printMessage(e, "@@ db.exception. message = {}", message);
 		} catch(RuntimeException e) {
 			// ogr2ogr2 실행하다가 에러날경우 이미 들어간 레이어, 레이러 파일정보 삭제 
 			Integer layerId = (Integer) updateLayerMap.get("layerId");
-			Integer layerFileInfoGroupId = (Integer) updateLayerMap.get("layerFileInfoGroupId");
+			Integer layerFileInfoTeamId = (Integer) updateLayerMap.get("layerFileInfoTeamId");
 			layerService.deleteLayer(layerId);
-			layerFileInfoService.deleteLayerFileInfoByGroupId(layerFileInfoGroupId);
+			layerFileInfoService.deleteLayerFileInfoByTeamId(layerFileInfoTeamId);
 			
 			statusCode = HttpStatus.INTERNAL_SERVER_ERROR.value();
 			errorCode = "runtime.exception";
 			message = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
 			LogMessageSupport.printMessage(e, "@@ runtime.exception. message = {}", message);
-//			log.info("@@ runtime.exception. message = {}", message);
 		} catch(Exception e) {
 			// ogr2ogr2 실행하다가 에러날경우 이미 들어간 레이어, 레이러 파일정보 삭제 
 			Integer layerId = (Integer) updateLayerMap.get("layerId");
-			Integer layerFileInfoGroupId = (Integer) updateLayerMap.get("layerFileInfoGroupId");
+			Integer layerFileInfoTeamId = (Integer) updateLayerMap.get("layerFileInfoTeamId");
 			layerService.deleteLayer(layerId);
-			layerFileInfoService.deleteLayerFileInfoByGroupId(layerFileInfoGroupId);
+			layerFileInfoService.deleteLayerFileInfoByTeamId(layerFileInfoTeamId);
 			
 			statusCode = HttpStatus.INTERNAL_SERVER_ERROR.value();
 			errorCode = "unknown.exception";
 			message = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
 			LogMessageSupport.printMessage(e, "@@ exception. message = {}", message);
-//			log.info("@@ exception. message = {}", message);
 		}
 
 		result.put("statusCode", statusCode);
@@ -389,13 +362,14 @@ public class LayerRestController implements AuthorizationController {
 		return result;
 	}
 	
-    /**
-    * shape 파일 변환
-    * TODO dropzone 이 파일 갯수만큼 form data를 전송해 버려서 command 패턴을(Layer layer) 사용할 수 없음
-    * dropzone 이 예외 처리가 이상해서 BAD_REQUEST 를 던지지 않고 OK 를 넣짐
-    * @param model
-    * @return
-    */
+	/**
+	 * shape 파일 변환
+	 * TODO dropzone 이 파일 갯수만큼 form data를 전송해 버려서 command 패턴을(Layer layer) 사용할 수 없음
+	 * dropzone 이 예외 처리가 이상해서 BAD_REQUEST 를 던지지 않고 OK 를 넣짐
+	 * @param request
+	 * @param layerId
+	 * @return
+	 */
     @SuppressWarnings("unchecked")
 	@PostMapping(value = "/update/{layerId:[0-9]+}")
     public Map<String, Object> update(MultipartHttpServletRequest request, @PathVariable("layerId") Integer layerId) {
@@ -409,7 +383,7 @@ public class LayerRestController implements AuthorizationController {
         Layer rollbackLayer = new Layer();
         boolean isLayerFileInfoExist = false;
         LayerFileInfo rollbackLayerFileInfo = null;
-        Integer deleteLayerFileInfoGroupId = null;
+        Integer deleteLayerFileInfoTeamId = null;
 
         try {
             errorCode = layerValidate(request);
@@ -477,7 +451,7 @@ public class LayerRestController implements AuthorizationController {
                     String originalName = multipartFile.getOriginalFilename();
                     String[] divideFileName = originalName.split("\\.");
                     String extension = null;
-                    if(divideFileName != null && divideFileName.length != 0) {
+                    if(divideFileName.length != 0) {
                         extension = divideFileName[divideFileName.length - 1];
                         if(LayerFileInfo.ZIP_EXTENSION.equalsIgnoreCase(extension)) {
                             log.info("@@@@@@@@@@@@ upload.file.type.invalid");
@@ -492,7 +466,7 @@ public class LayerRestController implements AuthorizationController {
                     try (	InputStream inputStream = multipartFile.getInputStream();
                             OutputStream outputStream = new FileOutputStream(makedDirectory + saveFileName)) {
 
-                    	int bytesRead = 0;
+                    	int bytesRead;
 						byte[] buffer = new byte[BUFFER_SIZE];
 						while ((bytesRead = inputStream.read(buffer, 0, BUFFER_SIZE)) != -1) {
 							size += bytesRead;
@@ -506,10 +480,10 @@ public class LayerRestController implements AuthorizationController {
                         layerFileInfo.setShapeEncoding(shapeEncoding);
 
                     } catch(IOException e) {
-						log.info("@@@@@@@@@@@@ IOException. message = {}", e.getMessage());
+						LogMessageSupport.printMessage(e, "@@@@@@@@@@@@ IOException. message = {}", e.getMessage());
 						layerFileInfo.setErrorMessage(e.getMessage());
                     } catch(Exception e) {
-                    	log.info("@@@@@@@@@@@@ Exception. message = {}", e.getMessage());
+                    	LogMessageSupport.printMessage(e, "@@@@@@@@@@@@ Exception. message = {}", e.getMessage());
                         layerFileInfo.setErrorMessage(e.getMessage());
                     }
 
@@ -570,7 +544,7 @@ public class LayerRestController implements AuthorizationController {
             if(!layerFileInfoList.isEmpty()) {
                 isRollback = true;
 
-                deleteLayerFileInfoGroupId = (Integer)updateLayerMap.get("layerFileInfoGroupId");
+                deleteLayerFileInfoTeamId = (Integer)updateLayerMap.get("layerFileInfoTeamId");
                 // 4. org2ogr 실행
                 layerService.insertOgr2Ogr(layer, isLayerFileInfoExist, (String)updateLayerMap.get("shapeFileName"), (String)updateLayerMap.get("shapeEncoding"));
 
@@ -594,33 +568,33 @@ public class LayerRestController implements AuthorizationController {
         } catch(DataAccessException e) {
         	if(isRollback) {
                 // rollback 처리
-                layerService.rollbackLayer(rollbackLayer, isLayerFileInfoExist, rollbackLayerFileInfo, deleteLayerFileInfoGroupId);
+                layerService.rollbackLayer(rollbackLayer, isLayerFileInfoExist, rollbackLayerFileInfo, deleteLayerFileInfoTeamId);
             }
         	
 			statusCode = HttpStatus.INTERNAL_SERVER_ERROR.value();
 			errorCode = "db.exception";
 			message = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
-			log.info("@@ db.exception. message = {}", message);
+			LogMessageSupport.printMessage(e, "@@ db.exception. message = {}", message);
 		} catch(RuntimeException e) {
 			if(isRollback) {
                 // rollback 처리
-                layerService.rollbackLayer(rollbackLayer, isLayerFileInfoExist, rollbackLayerFileInfo, deleteLayerFileInfoGroupId);
+                layerService.rollbackLayer(rollbackLayer, isLayerFileInfoExist, rollbackLayerFileInfo, deleteLayerFileInfoTeamId);
             }
 			
 			statusCode = HttpStatus.INTERNAL_SERVER_ERROR.value();
 			errorCode = "runtime.exception";
 			message = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
-			log.info("@@ runtime.exception. message = {}", message);
+			LogMessageSupport.printMessage(e, "@@ runtime.exception. message = {}", message);
 		} catch(Exception e) {
 			if(isRollback) {
                 // rollback 처리
-                layerService.rollbackLayer(rollbackLayer, isLayerFileInfoExist, rollbackLayerFileInfo, deleteLayerFileInfoGroupId);
+                layerService.rollbackLayer(rollbackLayer, isLayerFileInfoExist, rollbackLayerFileInfo, deleteLayerFileInfoTeamId);
             }
 			
 			statusCode = HttpStatus.INTERNAL_SERVER_ERROR.value();
 			errorCode = "unknown.exception";
 			message = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
-			log.info("@@ exception. message = {}", message);
+			LogMessageSupport.printMessage(e, "@@ exception. message = {}", message);
         }
 
         result.put("statusCode", statusCode);
@@ -631,7 +605,7 @@ public class LayerRestController implements AuthorizationController {
 
 	/**
 	 * 레이어 삭제 삭제
-	 * @param roleId
+	 * @param layerId
 	 * @return
 	 */
 	@DeleteMapping(value = "/delete/{layerId:[0-9]+}")
@@ -649,11 +623,12 @@ public class LayerRestController implements AuthorizationController {
 		return result;
 	}
 
-    /**
-    * shape 파일 목록
-    * @param model
-    * @return
-    */
+	/**
+	 * shape 파일 목록
+	 * @param request
+	 * @param layerId
+	 * @return
+	 */
     @GetMapping(value = "/{layerId:[0-9]+}/layer-fileinfos")
     public Map<String, Object> listLayerFileInfo(HttpServletRequest request, @PathVariable Integer layerId) {
 
@@ -661,9 +636,7 @@ public class LayerRestController implements AuthorizationController {
 		String errorCode = null;
 		String message = null;
 
-		List<LayerFileInfo> layerFileInfoList = new ArrayList<>();
-        
-        layerFileInfoList = layerFileInfoService.getListLayerFileInfo(layerId);
+		List<LayerFileInfo> layerFileInfoList = layerFileInfoService.getListLayerFileInfo(layerId);
         log.info("layerFileInfoList =============================== {} " , layerFileInfoList);
         int statusCode = HttpStatus.OK.value();
         
@@ -674,14 +647,16 @@ public class LayerRestController implements AuthorizationController {
 		return result;
     }
 
-    /**
-    * shape 파일 다운 로드
-    * @param model
-    * @return
-    */
-    @GetMapping(value = "/{layerId:[0-9]+}/layer-file-info/{layerFileInfoGroupId:[0-9]+}/download")
-    public void download(HttpServletRequest request, HttpServletResponse response, @PathVariable Integer layerId, @PathVariable Integer layerFileInfoGroupId) {
-        log.info("@@@@@@@@@@@@ layerId = {}, layerFileInfoGroupId = {}", layerId, layerFileInfoGroupId);
+	/**
+	 * shape 파일 다운 로드
+	 * @param request
+	 * @param response
+	 * @param layerId
+	 * @param layerFileInfoTeamId
+	 */
+    @GetMapping(value = "/{layerId:[0-9]+}/layer-file-info/{layerFileInfoTeamId:[0-9]+}/download")
+    public void download(HttpServletRequest request, HttpServletResponse response, @PathVariable Integer layerId, @PathVariable Integer layerFileInfoTeamId) {
+        log.info("@@@@@@@@@@@@ layerId = {}, layerFileInfoTeamId = {}", layerId, layerFileInfoTeamId);
         try {
 
             Layer layer = layerService.getLayer(layerId);
@@ -697,7 +672,7 @@ public class LayerRestController implements AuthorizationController {
             createDirectory(filePath);
             log.info("@@@@@@@ zip directory = {}", filePath);
 
-            List<LayerFileInfo> layerFileInfoList = layerFileInfoService.getLayerFileInfoGroup(layerFileInfoGroupId);
+            List<LayerFileInfo> layerFileInfoList = layerFileInfoService.getLayerFileInfoTeam(layerFileInfoTeamId);
             LayerFileInfo layerFileInfo = layerFileInfoList.get(0);
             layerFileInfo.setFilePath(filePath);
             layerFileInfo.setFileRealName(fileRealName);
@@ -721,41 +696,44 @@ public class LayerRestController implements AuthorizationController {
 
             File zipFile = new File(zipFileName);
             try(	BufferedInputStream in = new BufferedInputStream(new FileInputStream(zipFile));
-                    BufferedOutputStream out = new BufferedOutputStream(response.getOutputStream());) {
+                    BufferedOutputStream out = new BufferedOutputStream(response.getOutputStream())) {
 
                 FileCopyUtils.copy(in, out);
                 out.flush();
             } catch(IOException e) {
-            	log.info("@@ IOException. message = {}", e.getMessage());
+            	LogMessageSupport.printMessage(e, "@@ IOException. message = {}", e.getMessage());
             	throw new RuntimeException(e.getMessage());
             }
         } catch(DataAccessException e) {
-			log.info("@@ DataAccessException. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
+        	LogMessageSupport.printMessage(e, "@@ DataAccessException. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
         } catch(RuntimeException e) {
-			log.info("@@ RuntimeException. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
+			LogMessageSupport.printMessage(e, "@@ RuntimeException. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
         } catch(IOException e) {
-        	log.info("@@ FileNotFoundException. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
+			LogMessageSupport.printMessage(e, "@@ FileNotFoundException. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
         } catch(Exception e) {
-			log.info("@@ Exception. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
+			LogMessageSupport.printMessage(e, "@@ Exception. message = {}", e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
 		}
     }
 
-    /**
-    * 비활성화 상태의 layer를 활성화
-    * @param model
-    * @return
-    */
+	/**
+	 * 비활성화 상태의 layer를 활성화
+	 * @param request
+	 * @param layerId
+	 * @param layerFileInfoId
+	 * @param layerFileInfoTeamId
+	 * @return
+	 */
     @PostMapping(value = "/{layerId:[0-9]+}/layer-file-infos/{layerFileInfoId:[0-9]+}")
     public Map<String, Object> updateByLayerFileInfoId(HttpServletRequest request,
                                                             @PathVariable Integer layerId,
                                                             @PathVariable Integer layerFileInfoId,
-                                                            Integer layerFileInfoGroupId) {
+                                                            Integer layerFileInfoTeamId) {
         log.info("@@@@@@@@@@@@ layerId = {}, layerFileInfoId = {}", layerId, layerFileInfoId);
 
         Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
-        layerService.updateLayerByLayerFileInfoId(layerId, layerFileInfoGroupId, layerFileInfoId);
+        layerService.updateLayerByLayerFileInfoId(layerId, layerFileInfoTeamId, layerFileInfoId);
 
         int statusCode = HttpStatus.OK.value();
 
@@ -770,9 +748,8 @@ public class LayerRestController implements AuthorizationController {
     	Map<String, Object> result = new HashMap<>();
 		String errorCode = null;
 		String message = null;
-		LayerFileInfo layerFileInfo = new LayerFileInfo();
-    	
-        layerFileInfo = layerFileInfoService.getLayerFileInfo(layerFileInfoId);
+
+		LayerFileInfo layerFileInfo = layerFileInfoService.getLayerFileInfo(layerFileInfoId);
         log.info("@@@@@@@@@@@@@@@@@@@@@@@@@@ layerFileInfo = {}", layerFileInfo);
         int statusCode = HttpStatus.OK.value();
 
@@ -788,17 +765,17 @@ public class LayerRestController implements AuthorizationController {
         return value;
     }
 
-    /**
-    * 업로딩 파일을 압축 해제
-    * TODO 여기 Exception을 던지면 안될거 같음. 수정 필요
-    * @param policy
-    * @param groupFileName layer 의 경우 한 세트가 같은 이름에 확장자만 달라야 함
-    * @param userId
-    * @param multipartFile
-    * @param targetDirectory
-    * @return
-    * @throws Exception
-    */
+	/**
+	 * 업로딩 파일을 압축 해제
+	 * 	 * TODO 여기 Exception을 던지면 안될거 같음. 수정 필요
+	 * @param policy
+	 * @param groupFileName groupFileName layer 의 경우 한 세트가 같은 이름에 확장자만 달라야 함
+	 * @param multipartFile
+	 * @param shapeEncoding
+	 * @param targetDirectory
+	 * @return
+	 * @throws Exception
+	 */
     private Map<String, Object> unzip(Policy policy, String groupFileName, MultipartFile multipartFile, String shapeEncoding, String targetDirectory) throws Exception {
         Map<String, Object> result = new HashMap<>();
         String errorCode = fileValidate(policy, multipartFile);
@@ -816,7 +793,7 @@ public class LayerRestController implements AuthorizationController {
         File uploadedFile = new File(tempDirectory + multipartFile.getOriginalFilename());
         multipartFile.transferTo(uploadedFile);
 
-        try ( ZipFile zipFile = new ZipFile(uploadedFile);) {
+        try ( ZipFile zipFile = new ZipFile(uploadedFile)) {
             String directoryPath = targetDirectory;
             Enumeration<? extends ZipEntry> entries = zipFile.entries();
             while( entries.hasMoreElements() ) {
@@ -828,14 +805,12 @@ public class LayerRestController implements AuthorizationController {
                     File file = new File(unzipfileName);
                     file.mkdirs();
                 } else {
-                    String fileName = null;
                     String extension = null;
-                    String[] divideFileName = null;
                     String saveFileName = null;
 
-                    fileName = entry.getName();
-                    divideFileName = fileName.split("\\.");
-                    if(divideFileName != null && divideFileName.length != 0) {
+					String fileName = entry.getName();
+					String[] divideFileName = fileName.split("\\.");
+                    if(divideFileName.length != 0) {
                         extension = divideFileName[divideFileName.length - 1];
                         saveFileName = groupFileName + "." + extension;
                         log.info("--------- unzip saveFileName = {}", saveFileName);
@@ -843,8 +818,8 @@ public class LayerRestController implements AuthorizationController {
 
                     long size = 0L;
                     try ( 	InputStream inputStream = zipFile.getInputStream(entry);
-                            FileOutputStream outputStream = new FileOutputStream(targetDirectory + saveFileName); ) {
-                    	int bytesRead = 0;
+                            FileOutputStream outputStream = new FileOutputStream(targetDirectory + saveFileName) ) {
+                    	int bytesRead;
                         byte[] buffer = new byte[BUFFER_SIZE];
                         while ((bytesRead = inputStream.read(buffer, 0, BUFFER_SIZE)) != -1) {
                             size += bytesRead;
@@ -859,7 +834,7 @@ public class LayerRestController implements AuthorizationController {
                         layerFileInfo.setShapeEncoding(shapeEncoding);
 
                     } catch(IOException e) {
-                    	log.info("@@ IOException. message = {}", e.getMessage());
+                    	LogMessageSupport.printMessage(e, "@@ IOException. message = {}", e.getMessage());
                     	layerFileInfo.setErrorMessage(e.getMessage());
                     	throw new RuntimeException(e.getMessage());
                     }
@@ -870,9 +845,9 @@ public class LayerRestController implements AuthorizationController {
                 }
             }
         } catch(RuntimeException ex) {
-        	log.info("@@ RuntimeException. message = {}", ex.getCause() != null ? ex.getCause().getMessage() : ex.getMessage());
+        	LogMessageSupport.printMessage(ex, "@@ RuntimeException. message = {}", ex.getCause() != null ? ex.getCause().getMessage() : ex.getMessage());
         } catch(Exception ex) {
-        	log.info("@@ RuntimeException. message = {}", ex.getCause() != null ? ex.getCause().getMessage() : ex.getMessage());
+        	LogMessageSupport.printMessage(ex, "@@ RuntimeException. message = {}", ex.getCause() != null ? ex.getCause().getMessage() : ex.getMessage());
         }
 
         log.info("##################### unzip layerFileInfoList = {}", layerFileInfoList.size());
@@ -928,7 +903,7 @@ public class LayerRestController implements AuthorizationController {
         // 4 파일 사이즈
         long fileSize = multipartFile.getSize();
         log.info("@@@@@@@@@@@@@@@@@@@@@@@@@@ upload file size = {} KB", (fileSize / 1000));
-        if( fileSize > (policy.getUserUploadMaxFilesize() * 1000000l)) {
+        if( fileSize > (policy.getUserUploadMaxFilesize() * 1000000L)) {
             log.info("@@ fileSize = {}, user upload max filesize = {} M", (fileSize / 1000), policy.getUserUploadMaxFilesize());
             return "fileinfo.size.invalid";
         }
@@ -953,13 +928,11 @@ public class LayerRestController implements AuthorizationController {
     	return null;
     }
 
-    /**
-    * @param userId
-    * @param today
-    * @param targetDirectory
-    * @return
-    */
-    private void createDirectory(String targetDirectory) {
+	/**
+	 *
+	 * @param targetDirectory
+	 */
+	private void createDirectory(String targetDirectory) {
         File directory = new File(targetDirectory);
         if(!directory.exists()) {
             directory.mkdir();
@@ -989,31 +962,31 @@ public class LayerRestController implements AuthorizationController {
 
         log.info("================================= browser = {}", browser);
         if (browser.equals("MSIE")) {
-            encodedFilename = URLEncoder.encode(filename, "UTF-8").replaceAll("\\+", "%20");
+            encodedFilename = URLEncoder.encode(filename, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         } else if (browser.equals("Trident")) {       // IE11 문자열 깨짐 방지
-            encodedFilename = URLEncoder.encode(filename, "UTF-8").replaceAll("\\+", "%20");
+            encodedFilename = URLEncoder.encode(filename, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         } else if (browser.equals("Firefox")) {
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1") + "\"";
-            encodedFilename = URLDecoder.decode(encodedFilename, "UTF-8");
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1") + "\"";
+            encodedFilename = URLDecoder.decode(encodedFilename, StandardCharsets.UTF_8);
         } else if (browser.equals("Opera")) {
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1") + "\"";
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1") + "\"";
         } else if (browser.equals("Chrome")) {
             StringBuffer sb = new StringBuffer();
             for (int i = 0; i < filename.length(); i++) {
                 char c = filename.charAt(i);
                 if (c > '~') {
-                    sb.append(URLEncoder.encode("" + c, "UTF-8"));
+                    sb.append(URLEncoder.encode("" + c, StandardCharsets.UTF_8));
                 } else {
                     sb.append(c);
                 }
             }
             encodedFilename = sb.toString();
         } else if (browser.equals("Safari")){
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1")+ "\"";
-            encodedFilename = URLDecoder.decode(encodedFilename, "UTF-8");
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1")+ "\"";
+            encodedFilename = URLDecoder.decode(encodedFilename, StandardCharsets.UTF_8);
         }
         else {
-            encodedFilename = "\"" + new String(filename.getBytes("UTF-8"), "8859_1")+ "\"";
+            encodedFilename = "\"" + new String(filename.getBytes(StandardCharsets.UTF_8), "8859_1")+ "\"";
         }
 
         response.setHeader("Content-Disposition", dispositionPrefix + encodedFilename);
